# meeting-collaboration-platform

./: README.md  docker-compose.yml
action-items-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
action-items-service/src/action_items/: __init__.py  config.py  main.py
action-items-service/src/action_items/models/: __init__.py
action-items-service/src/action_items/routers/: __init__.py  health.py
action-items-service/src/action_items/schemas/: __init__.py
action-items-service/tests/: __init__.py  test_main.py
agenda-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agenda-service/tests/: __init__.py  test_main.py
api-gateway/: nginx.conf
core-service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core-service/src/core_service/: __init__.py  cli.py
core-service/src/core_service/templates/service/: .env.example.j2  Dockerfile.j2  README.md.j2  docker-compose.yml.j2  pyproject.toml.j2  requirements.txt.j2
core-service/src/core_service/templates/service/src/{{service_name}}/: __init__.py.j2  config.py.j2  main.py.j2
core-service/src/core_service/templates/service/src/{{service_name}}/models/: __init__.py.j2
core-service/src/core_service/templates/service/src/{{service_name}}/routers/: __init__.py.j2  health.py.j2
core-service/src/core_service/templates/service/src/{{service_name}}/schemas/: __init__.py.j2
core-service/src/core_service/templates/service/tests/: __init__.py.j2  test_main.py.j2
core-service/tests/: test_cli.py
file-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
file-service/src/file/: __init__.py  config.py  main.py
file-service/src/file/models/: __init__.py
file-service/src/file/routers/: __init__.py  health.py
file-service/src/file/schemas/: __init__.py
file-service/tests/: __init__.py  test_main.py
notes-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notes-service/tests/: __init__.py  test_main.py
polls-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
polls-service/tests/: __init__.py  (+1 more)
scripts/: init-databases.sh
shared-libs/: README.md  pyproject.toml
(+36 files in other folders)
