[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-service"
version = "0.1.0"
description = "Core Service — CLI tooling and infrastructure setup for the meeting-collaboration-platform."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
mcp-core = "core_service.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py311"
